# odoo-selenium

./: .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.docker/: Dockerfile  chrome-compose.yaml  entrypoint.sh  grid-compose.yaml  odoo.conf
.github/workflows/: qa.yaml
src/odoo_selenium/: __init__.py  expectations.py  selenium.py
src/osut/: __init__.py  selenium.py
tests_odoo/test_selenium/: README.md  __manifest__.py
tests_odoo/test_selenium/tests/: test_selenium.py
